pma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pma
  name: pma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pma
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pma
    spec:
      containers:
        - image: phpmyadmin/phpmyadmin
          name: phpmyadmin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pma-service
spec:
  type: ClusterIP
  selector:
    app: pma
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
