pma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pma-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: pma-tls
      hosts:
        - pma.domain.com # Change with your domain
  rules:
    - host: pma.domain.com # Change with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pma-service
                port:
                  number: 80
